# troll-string-util

./: .gitignore  CMakeLists.txt  CTestCustom.cmake  LICENSE  README.md  _config.yml
.github/workflows/: linux-unittest.yml
assets/css/: style.scss
docs/: format.md  format_scan.md  utils.md
include/troll_util/: format.hpp  format_scan.hpp  utils.hpp
tests/: test_format.cpp  test_format_scan.cpp
